// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Action Output Tests > Action Full Rendering 1`] = `
<div>
  <div
    class="msg button imageOnly copyButton"
    data-tooltip="Copy result to clipboard"
    role="button"
    tabindex="-1"
  >
    <div
      class="msg icon codicon codicon-copy"
      data-tooltip="inherit"
    />
  </div>
  <div
    class="msg container fixedScrollbar actionOutput"
    style="flex-direction: column;"
  >
    <div
      class="actionRow"
    >
      <label
        class="msg resultText error actionLabel"
        style="grid-column: span 2;"
        tabindex="-1"
      >
        <span
          data-tooltip="inherit"
        >
          Lorem ipsum dolor sit amet
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Action Output Tests > Action Full Rendering 2`] = `
HTMLCollection [
  <div
    class="msg button imageOnly copyButton"
    data-tooltip="Copy result to clipboard"
    role="button"
    tabindex="-1"
  >
    <div
      class="msg icon codicon codicon-copy"
      data-tooltip="inherit"
    />
  </div>,
  <div
    class="msg icon codicon codicon-copy"
    data-tooltip="inherit"
  />,
  <div
    class="msg container fixedScrollbar actionOutput"
    style="flex-direction: column;"
  >
    <div
      class="actionRow"
    >
      <label
        class="msg resultText response actionLabel"
        style="grid-column: span 2;"
        tabindex="-1"
      >
        <span
          data-tooltip="inherit"
        >
          A simple response
        </span>
      </label>
    </div>
  </div>,
  <label
    class="msg resultText response actionLabel"
    style="grid-column: span 2;"
    tabindex="-1"
  >
    <span
      data-tooltip="inherit"
    >
      A simple response
    </span>
  </label>,
]
`;

exports[`Action Output Tests > Standard Rendering 1`] = `
<div>
  <div
    class="msg button imageOnly copyButton"
    data-tooltip="Copy result to clipboard"
    role="button"
    tabindex="-1"
  >
    <div
      class="msg icon codicon codicon-copy"
      data-tooltip="inherit"
    />
  </div>
  <div
    class="msg container fixedScrollbar actionOutput"
    style="flex-direction: column;"
  />
</div>
`;
